Minor wording changes

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -223,38 +223,38 @@
    "metadata": {},
    "source": [
     "- Highways\n",
-    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
+    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ----- |\n",
-    "    | Soft Limit  |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 110\\degree $ | $ \\geq 141\\degree $ | $ \\geq 160\\degree $ | $ \\geq 170\\degree $ | |\n",
+    "    | -           |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 110\\degree $ | $ \\geq 141\\degree $ | $ \\geq 160\\degree $ | $ \\geq 170\\degree $ | |\n",
     "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq 115\\degree $ | $ \\geq 145\\degree $ | $ \\geq 162\\degree $ | |\n",
-    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
-    "    | Mandatory   |  $ \\leq 10  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
+    "    | -           |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
+    "    | Hard Limit  |  $ \\leq 10  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
     "    \n",
-    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phases curve of $d$ - $d$ in game.\n",
+    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
     "    - Source: [2024-08-17] (US) https://en.wikipedia.org/wiki/Grade_(slope)#Roads\n",
     "    - Source: [2024-08-17] (EU) https://en.wikipedia.org/wiki/International_E-road_network#Road_design_standards\n",
     "      - According to the source,\n",
     "        $ R \\geq 1000 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq 140 \\mathrm{km/h} $; and\n",
     "        $ R \\geq  120 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq  60 \\mathrm{km/h} $.\n",
-    "      - Assuming the curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
+    "      - Assuming the radius of curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
     "        i.e. $ R \\approx v_\\mathrm{max}^2 / (30 \\mathrm{mh/km}) $ for lower  limit,\n",
     "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit.\n",
     "- Arterial / Collector / Local Roads\n",
     "  - Gradient  limit:\n",
     "    (Arbitrarily set to:)\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
-    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | ----- |\n",
-    "    | Recommended |  $ \\leq 10  \\% $  |  -                         |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial |\n",
-    "    | Mandatory   |  $ \\leq 36  \\% $  |  -                         |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
+    "    |             | Gradient $ s $    | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
+    "    | ----------- | :---------------: | :----------------------------: | ----- |\n",
+    "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial |\n",
+    "    | Hard Limit  |  $ \\leq 36  \\% $  |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
     "    \n",
     "- Bike paths\n",
     "  - TBD\n",
     "- Ped  paths\n",
-    "  - TBD "
+    "  - TBD"
    ]
   },
   {
@@ -271,14 +271,14 @@
    "metadata": {},
    "source": [
     "- Freight and old Passenger Railways\n",
-    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  1.5\\% $  |  $ \\geq  640 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | $ \\geq 158\\degree $ | $ \\geq 169\\degree $ | |\n",
-    "    | Mandatory   |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
+    "    | Hard Limit  |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
     "    \n",
-    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phases curve of $d$ - $d$ in game.\n",
+    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
     "    - Angle $ \\theta_{d} $ equation:\n",
     "      $ \\theta_{d} = 2 \\tan^{-1}{\\frac{R}{d}} $\n",
@@ -294,25 +294,25 @@
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii (Lithgow Zig Zag)\n",
     "    - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
-    "    - Note: Liberties have been taken for the mandatory limit of $s$ due to steep terrain in the map. Also steeper is more fun.\n",
+    "    - Note: Liberties have been taken for the hard limit of $s$ due to steep terrain in the map. Also steeper is more fun.\n",
     "  - Length limit (for track intersections): $ > 500\\mathrm{m} $ (25 cars with 20m per car)\n",
     "- High Speed Railways\n",
-    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  3.5\\% $  |  $ \\geq 4000 \\mathrm{m} $  |  $ \\simeq 300 \\mathrm{km/h} $  | $ \\geq 166\\degree $ | $ \\geq 173\\degree $ | $ \\geq 177\\degree $ | $ \\geq 179\\degree $ | |\n",
-    "    | Mandatory   |  $ \\leq  4  \\% $  |  $ \\geq 3500 \\mathrm{m} $  |  $ \\simeq 250 \\mathrm{km/h} $  | $ \\geq 164\\degree $ | $ \\geq 172\\degree $ | $ \\geq 176\\degree $ | $ \\geq 178\\degree $ | |\n",
+    "    | Hard Limit  |  $ \\leq  4  \\% $  |  $ \\geq 3500 \\mathrm{m} $  |  $ \\simeq 250 \\mathrm{km/h} $  | $ \\geq 164\\degree $ | $ \\geq 172\\degree $ | $ \\geq 176\\degree $ | $ \\geq 178\\degree $ | |\n",
     "    \n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "- Metro / Subway / Passenger Railways\n",
-    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | [$ s $] Höllentalbahn (Black Forest), Germany;<br>[$ R $] Bay Area Rapid Transit, United States. |\n",
-    "    | Mandatory   |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | [$ s $] Bernina Railway, Switzerland;<br>[$ R $] Central line, London Underground, United Kingdom. |\n",
+    "    | Hard Limit  |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | [$ s $] Bernina Railway, Switzerland;<br>[$ R $] Central line, London Underground, United Kingdom. |\n",
     "    \n",
     "  - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
     "  - Source: [2024-08-17] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
@@ -322,7 +322,7 @@
     "    |             | Gradient $ s $    | Speed limit $ v_\\mathrm{max} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :----------------------------: | ------------------- |\n",
     "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  90 \\mathrm{km/h} $  | Sheffield Supertram, Sheffield |\n",
-    "    | Mandatory   |  $ \\leq 13.5\\% $  |  $ \\simeq  70?\\mathrm{km/h} $  | Lisbon Tramways, Portugal |\n",
+    "    | Hard Limit  |  $ \\leq 13.5\\% $  |  $ \\simeq  70?\\mathrm{km/h} $  | Lisbon Tramways, Portugal |\n",
     "    \n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples"
    ]
