Added lane type acronyms specifications (for the road builder

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -145,12 +145,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "174c5028-3a4a-44e2-9bea-94edadde4883",
+   "metadata": {},
+   "source": [
+    "### Sigloj<br>Acronyms\n",
+    "\n",
+    "-------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82560901-6aca-498f-a06b-77aede34fc51",
    "metadata": {},
    "source": [
     "\n",
     "\n",
-    "#### Single letter abbreviations\n"
+    "#### Direktoj<br>Directions\n"
    ]
   },
   {
@@ -159,7 +169,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "| Acronym | Esperanto     | English  |\n",
+    "| Siglo<br>Acronym | En esperanto<br>In Esperanto | En la angla<br>In English |\n",
     "| :-----: | ------------- | -------- |\n",
     "|    N    | **N**orda     | Northern |\n",
     "|    S    | **S**uda      | Southern |\n",
@@ -169,7 +179,76 @@
     "|    C    | **C**entra    | Center   |\n",
     "|    D    | **D**ekstra   | Right    |\n",
     "|    P    | **P**lus / Maldekstruma / S->N / K->R | Plus / Counterclockwise / S->N / W->E |\n",
-    "|    M    | **M**inus / Dekstruma / N->S / R->K   | Minus /       Clockwise / N->S / E->W |\n"
+    "|    M    | **M**inus / Dekstruma / N->S / R->K   | Minus /       Clockwise / N->S / E->W |\n",
+    "\n",
+    "Note: P/M follows positive and negative directions in mathematics (thus P for counterclockwise directions).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9720c252-fb6d-4a4a-ad1e-b70443aebef6",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### Stratetoj<br>Lanes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e717b3-7fea-4213-ae1a-22e4751b9506",
+   "metadata": {},
+   "source": [
+    "\n",
+    "| Siglo<br>Acronym | Strateta Tipo<br>(en esperanto) | Lane Type<br>(in English) | Strateta Larĝeco<br>Lane Width |\n",
+    "| :-----: | ------------------- | ------------------- | :---------: |\n",
+    "|    H    | **H**omo/Piediranto | Human/Pedestrian    | $\\geq$ 1m   |\n",
+    "|    B    | **B**iciklo         | Bike                |        ?    |\n",
+    "|    A    | **A**ŭtomobilo      | Car                 |        3m   |\n",
+    "|    T    | **T**ransporto<br>(Buso, Tramo)   | Transit<br>(Bus, Tram)         |        3m   |\n",
+    "|    V    | **V**agonaro/Trajno | Train               |        4m?  |\n",
+    "|    G    | Neŭtrala **G**rundo<br>Meza Strio | Neutral Ground<br>Median Strip | $\\geq$ 1m   |\n",
+    "|    i    | **i**nverse         | vice versa          | -           |\n",
+    "\n",
+    "De-capitalize for lanes with inverted directions.\n",
+    "\n",
+    "Road name format examples:\n",
+    "\n",
+    "- HBA2Gi\n",
+    "  - pedestrain path (H) - bike (B) - 2 car lanes (A2) - median (G) - same for the other half of the road (i)\n",
+    "  - Median road with bike\n",
+    "- Ha2TGi\n",
+    "  - pedestrain path (H) - 2 inverted car lanes (A2) - transit lane (T) - median (G) - same for the other half (i)\n",
+    "  - Median road for diverging diamond interchanges\n",
+    "- HA3a2h\n",
+    "  - pedestrain path (H) - 3 car lanes (A3) - 2 inverted car lanes (A2) - inverted pedestrain path (h)\n",
+    "  - Asymmetrical median road\n",
+    "\n",
+    "See also:\n",
+    "\n",
+    "- Road Builder mod by TDW: https://mods.paradoxplaza.com/mods/87190/Windows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ef203ea1-49e1-4da3-9833-b9adc4f2d090",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 \t E F J O U Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Ascii Letters left:\"\"\"\n",
+    "all__letters = \"A B C D E F G H I J K L M N O P R S T U V Z\".split()\n",
+    "used_letters = \"N S R K L C D P M  H B A T V G I\".split()\n",
+    "left_letters = [a for a in all__letters if a not in used_letters]\n",
+    "print(len(left_letters), '\\t', ' '.join(left_letters))"
    ]
   },
   {
@@ -233,7 +312,7 @@
     "    | Hard Limit  |  $ \\leq 10  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
-    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
+    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
     "    - Source: [2024-08-17] (US) https://en.wikipedia.org/wiki/Grade_(slope)#Roads\n",
     "    - Source: [2024-08-17] (EU) https://en.wikipedia.org/wiki/International_E-road_network#Road_design_standards\n",
     "      - According to the source,\n",
@@ -279,7 +358,7 @@
     "    | Hard Limit  |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
-    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
+    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
     "    - Angle $ \\theta_{d} $ equation:\n",
     "      $ \\theta_{d} = 2 \\tan^{-1}{\\frac{R}{d}} $\n",
     "      ```\n",
@@ -329,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4c9f4914-d660-406c-bf5c-f650834d3886",
    "metadata": {},
    "outputs": [
@@ -346,7 +425,7 @@
        "np.float64(163.0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "78941f55-85a0-4f78-880b-58494eda11b7",
    "metadata": {},
    "outputs": [
@@ -501,7 +580,7 @@
        "<Quantity 3505.2 m>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
