Added public transit lines acronym specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -253,6 +253,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "817767d2-32a8-42ea-b502-b7e462c63cde",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### Publika Transportaj Linioj<br>Public Transit Lines\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad945d31-4be4-46c3-8c23-c17e530e244d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Note that the letters are overlapping other acronyms in other categories - and they are not necessarily the same. \n",
+    "\n",
+    "| Siglo<br>Acronym | Strateta Tipo<br>(en esperanto) | Lane Type<br>(in English) | Notes |\n",
+    "| :-----: | ------------------- | ------------------- | ----------- |\n",
+    "|    B    | **B**uso            | Bus                 | |\n",
+    "|    T    | **T**ramo           | Tram                | |\n",
+    "|    M    | **M**etroo          | Metro<br>Monorail<br>Train (Intracity) | |\n",
+    "|    V    | **V**agonaro/Trajno | Train (Intercity)   | |\n",
+    "|    P    | **P**ramo           | Ferry (Intracity)   | |\n",
+    "|    Sx   | **Ŝ**ipo            | Ship (Intercity)    | |\n",
+    "|    A    | **A**viadilo        | Plane (Intercity)   | |\n",
+    "|    K-   | **K**argo-          | Cargo-              | |\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "- Bus route 123: B123\n",
+    "- Train line 3: V3\n",
+    "- Cargo train line 1: KV1\n",
+    "- Cargo barge route 4: KP4\n",
+    "- Cargo container ship route 2: KSx2\n",
+    "- Cargo Airline 5: KA5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14c83ee8-5152-4496-b1af-24aaef74b68f",
    "metadata": {},
    "source": [
