Minor wording changes

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -178,8 +178,8 @@
     "|    L    | **L**iva      | Left     |\n",
     "|    C    | **C**entra    | Center   |\n",
     "|    D    | **D**ekstra   | Right    |\n",
-    "|    P    | **P**lus / Maldekstruma / S->N / K->R | Plus / Counterclockwise / S->N / W->E |\n",
-    "|    M    | **M**inus / Dekstruma / N->S / R->K   | Minus /       Clockwise / N->S / E->W |\n",
+    "|    P    | **P**lus  / Pozitiva /<br>Maldekstruma /<br>S->N / K->R | Plus  / Positive /<br>Counterclockwise /<br>S->N / W->E |\n",
+    "|    M    | **M**inus / Negativa /<br>Dekstruma    /<br>N->S / R->K | Minus / Negative /<br>       Clockwise /<br>N->S / E->W |\n",
     "\n",
     "Note: P/M follows positive and negative directions in mathematics (thus P for counterclockwise directions).\n"
    ]
@@ -277,7 +277,7 @@
     "|    V    | **V**agonaro/Trajno | Train (Intercity)   | |\n",
     "|    P    | **P**ramo           | Ferry (Intracity)   | |\n",
     "|    Sx   | **Ŝ**ipo            | Ship (Intercity)    | |\n",
-    "|    A    | **A**viadilo        | Plane (Intercity)   | |\n",
+    "|    A    | **A**viadilo        | Airplane            | |\n",
     "|    K-   | **K**argo-          | Cargo-              | |\n",
     "\n",
     "Examples:\n",
