Update Lane acronym and Road slope and curvature specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -202,23 +202,25 @@
     "\n",
     "| Siglo<br>Acronym | Strateta Tipo<br>(en esperanto) | Lane Type<br>(in English) | Strateta Larĝeco<br>Lane Width |\n",
     "| :-----: | ------------------- | ------------------- | :---------: |\n",
-    "|    H    | **H**omo/Piediranto | Human/Pedestrian    | $\\geq$ 1m   |\n",
+    "|    H    | **H**omo/Piediranto | Human/Pedestrian    | $\\geq$ 3.5m |\n",
     "|    B    | **B**iciklo         | Bike                |        ?    |\n",
     "|    A    | **A**ŭtomobilo      | Car                 |        3m   |\n",
     "|    T    | **T**ransporto<br>(Buso, Tramo)   | Transit<br>(Bus, Tram)         |        3m   |\n",
-    "|    V    | **V**agonaro/Trajno | Train               |        4m?  |\n",
+    "|    E    | f**E**rvojo/m**E**troo | Railway/Metro    |        4m   |\n",
+    "|    V    | **V**agonaro/Trajno | Train               |        4m   |\n",
     "|    G    | Neŭtrala **G**rundo<br>Meza Strio | Neutral Ground<br>Median Strip | $\\geq$ 1m   |\n",
+    "|    O    | l**O**kokupilo      | Placeholder         | -           |\n",
     "|    i    | **i**nverse         | vice versa          | -           |\n",
     "\n",
     "De-capitalize for lanes with inverted directions.\n",
     "\n",
     "Road name format examples:\n",
     "\n",
-    "- HBA2Gi\n",
-    "  - pedestrain path (H) - bike (B) - 2 car lanes (A2) - median (G) - same for the other half of the road (i)\n",
+    "- HBA2gi\n",
+    "  - pedestrain path (H) - bike (B) - 2 car lanes (A2) - central median (g) - same for the other half of the road (i)\n",
     "  - Median road with bike\n",
-    "- Ha2TGi\n",
-    "  - pedestrain path (H) - 2 inverted car lanes (A2) - transit lane (T) - median (G) - same for the other half (i)\n",
+    "- Ha2Tgi\n",
+    "  - pedestrain path (H) - 2 inverted car lanes (A2) - transit lane (T) - central median (g) - same for the other half (i)\n",
     "  - Median road for diverging diamond interchanges\n",
     "- HA3a2h\n",
     "  - pedestrain path (H) - 3 car lanes (A3) - 2 inverted car lanes (A2) - inverted pedestrain path (h)\n",
@@ -239,14 +241,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 \t E F J O U Z\n"
+      "5 \t F J O U Z\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Ascii Letters left:\"\"\"\n",
     "all__letters = \"A B C D E F G H I J K L M N O P R S T U V Z\".split()\n",
-    "used_letters = \"N S R K L C D P M  H B A T V G I\".split()\n",
+    "used_letters = \"N S R K L C D P M  H B A T E V G I\".split()\n",
     "left_letters = [a for a in all__letters if a not in used_letters]\n",
     "print(len(left_letters), '\\t', ' '.join(left_letters))"
    ]
@@ -273,17 +275,21 @@
     "| :-----: | ------------------- | ------------------- | ----------- |\n",
     "|    B    | **B**uso            | Bus                 | |\n",
     "|    T    | **T**ramo           | Tram                | |\n",
-    "|    M    | **M**etroo          | Metro<br>Monorail<br>Train (Intracity) | |\n",
-    "|    V    | **V**agonaro/Trajno | Train (Intercity)   | |\n",
+    "|    E    | f**E**rvojo/m**E**troo | Railway/Metro<br>Monorail<br>Train (Intracity) | |\n",
+    "|    V    | **V**agonaro/Trajno | Train (Intercity, high speed)   | |\n",
     "|    P    | **P**ramo           | Ferry (Intracity)   | |\n",
     "|    Sx   | **Ŝ**ipo            | Ship (Intercity)    | |\n",
     "|    A    | **A**viadilo        | Airplane            | |\n",
     "|    K-   | **K**argo-          | Cargo-              | |\n",
+    "|    H-   | **H**omo-/Pasaĝero- | Human-/Passenger-   | |\n",
+    "\n",
+    "\n",
+    "H prefix is usually omitted.\n",
     "\n",
     "Examples:\n",
     "\n",
-    "- Bus route 123: B123\n",
-    "- Train line 3: V3\n",
+    "- Bus route 123: B123 (short for HB123)\n",
+    "- Train line 3: V3 (short for HV3)\n",
     "- Cargo train line 1: KV1\n",
     "- Cargo barge route 4: KP4\n",
     "- Cargo container ship route 2: KSx2\n",
@@ -347,8 +353,9 @@
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ----- |\n",
     "    | -           |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 110\\degree $ | $ \\geq 141\\degree $ | $ \\geq 160\\degree $ | $ \\geq 170\\degree $ | |\n",
     "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq 115\\degree $ | $ \\geq 145\\degree $ | $ \\geq 162\\degree $ | |\n",
-    "    | -           |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
-    "    | Hard Limit  |  $ \\leq 10  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
+    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
+    "    | -           |  $ \\leq 10  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
+    "    | Hard Limit  |  $ \\leq 12  \\% $  |  $ \\geq   32 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | -                   | -                   | For ramps / In mountains |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
@@ -455,13 +462,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(512, np.float64(166.0)), (256, np.float64(173.0)), (128, np.float64(177.0)), (64, np.float64(179.0))]\n"
+      "[(512, np.float64(27.0)), (256, np.float64(51.0)), (128, np.float64(87.0)), (64, np.float64(124.0))]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(163.0)"
+       "np.float64(107.0)"
       ]
      },
      "execution_count": 2,
@@ -472,8 +479,8 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
-    "print([(d, theta_deg(R=4000, d=d)) for d in (512, 256, 128, 64)])\n",
-    "theta_deg(R=720, d=108)"
+    "print([(d, theta_deg(R=120, d=d)) for d in (512, 256, 128, 64)])\n",
+    "theta_deg(R=128, d=96)"
    ]
   },
   {
