Update Road curvature specifications (relaxed)with new sources

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -351,11 +351,11 @@
     "    \n",
     "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ----- |\n",
-    "    | -           |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 110\\degree $ | $ \\geq 141\\degree $ | $ \\geq 160\\degree $ | $ \\geq 170\\degree $ | |\n",
-    "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq 115\\degree $ | $ \\geq 145\\degree $ | $ \\geq 162\\degree $ | |\n",
-    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
-    "    | -           |  $ \\leq 10  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
-    "    | Hard Limit  |  $ \\leq 12  \\% $  |  $ \\geq   32 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | -                   | -                   | For ramps / In mountains |\n",
+    "    | -           |  $ \\leq  4  \\% $  |  $ \\geq  512 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq  90\\degree $ | $ \\geq 127\\degree $ | $ \\geq 152\\degree $ | $ \\geq 166\\degree $ | |\n",
+    "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  288 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq  97\\degree $ | $ \\geq 133\\degree $ | $ \\geq 155\\degree $ | |\n",
+    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  184 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 111\\degree $ | $ \\geq 142\\degree $ | For ramps / In mountains |\n",
+    "    | -           |  $ \\leq  9  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
+    "    | Hard Limit  |  $ \\leq 10  \\% $  |  $ \\geq   32 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | -                   | -                   | For ramps / In mountains |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
@@ -364,16 +364,21 @@
     "      - According to the source,\n",
     "        $ R \\geq 1000 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq 140 \\mathrm{km/h} $; and\n",
     "        $ R \\geq  120 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq  60 \\mathrm{km/h} $.\n",
-    "      - Assuming the radius of curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
+    "      - ~~Assuming the radius of curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
     "        i.e. $ R \\approx v_\\mathrm{max}^2 / (30 \\mathrm{mh/km}) $ for lower  limit,\n",
-    "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit.\n",
+    "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit~~.\n",
+    "    - Source: [2024-08-23] (for $R$) https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0256301  \n",
+    "      - figure 9: Predictions of speed thresholds of the truck in a sharp turn with different superelevation rates  \n",
+    "        https://journals.plos.org/plosone/article/figure?id=10.1371/journal.pone.0256301.g009\n",
+    "        .\n",
     "- Arterial / Collector / Local Roads\n",
     "  - Gradient  limit:\n",
     "    (Arbitrarily set to:)\n",
     "    \n",
     "    |             | Gradient $ s $    | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
     "    | ----------- | :---------------: | :----------------------------: | ----- |\n",
-    "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial |\n",
+    "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial    |\n",
+    "    | Soft Limit  |  $ \\leq 13.5\\% $  |  $ \\simeq  50 \\mathrm{km/h} $  | Collector   |\n",
     "    | Hard Limit  |  $ \\leq 36  \\% $  |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
     "    \n",
     "- Bike paths\n",
@@ -468,7 +473,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(107.0)"
+       "np.float64(164.0)"
       ]
      },
      "execution_count": 2,
@@ -480,7 +485,7 @@
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
     "print([(d, theta_deg(R=120, d=d)) for d in (512, 256, 128, 64)])\n",
-    "theta_deg(R=128, d=96)"
+    "theta_deg(R=216, d=32)"
    ]
   },
   {
