Minor change in the slope and curvature specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -379,7 +379,9 @@
     "    | ----------- | :---------------: | :----------------------------: | ----- |\n",
     "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial    |\n",
     "    | Soft Limit  |  $ \\leq 13.5\\% $  |  $ \\simeq  50 \\mathrm{km/h} $  | Collector   |\n",
-    "    | Hard Limit  |  $ \\leq 36  \\% $  |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
+    "    | Hard Limit  |  $ \\leq 30  \\% $* |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
+    "\n",
+    "    * Note that vanilla game by default only allow up to $20 \\%$ gradient.\n",
     "    \n",
     "- Bike paths\n",
     "  - TBD\n",
@@ -406,7 +408,7 @@
     "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  1.5\\% $  |  $ \\geq  640 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | $ \\geq 158\\degree $ | $ \\geq 169\\degree $ | |\n",
-    "    | Hard Limit  |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
+    "    | Hard Limit  |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
@@ -452,7 +454,7 @@
     "    |             | Gradient $ s $    | Speed limit $ v_\\mathrm{max} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :----------------------------: | ------------------- |\n",
     "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  90 \\mathrm{km/h} $  | Sheffield Supertram, Sheffield |\n",
-    "    | Hard Limit  |  $ \\leq 13.5\\% $  |  $ \\simeq  70?\\mathrm{km/h} $  | Lisbon Tramways, Portugal |\n",
+    "    | Hard Limit  |  $ \\leq 13.5\\% $  |  $ \\simeq  60 \\mathrm{km/h} $  | Lisbon Tramways, Portugal |\n",
     "    \n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples"
    ]
