Added palm trees related specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -368,8 +368,8 @@
     "        i.e. $ R \\approx v_\\mathrm{max}^2 / (30 \\mathrm{mh/km}) $ for lower  limit,\n",
     "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit~~.\n",
     "    - Source: [2024-08-23] (for $R$) https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0256301  \n",
-    "      - figure 9: Predictions of speed thresholds of the truck in a sharp turn with different superelevation rates  \n",
-    "        https://journals.plos.org/plosone/article/figure?id=10.1371/journal.pone.0256301.g009\n",
+    "      - figure 8: Predictions of speed thresholds of the truck in a sharp turn \n",
+    "        https://doi.org/10.1371/journal.pone.0256301.g008\n",
     "        .\n",
     "- Arterial / Collector / Local Roads\n",
     "  - Gradient  limit:\n",
@@ -515,6 +515,8 @@
    "id": "b24e4eee-35e8-427c-b0a6-e16126855085",
    "metadata": {},
    "source": [
+    "- Brush   3: Altitude $<$0m; Beaches\n",
+    "  - Palm Trees (Coconut, Florida, Royal)\n",
     "- Brush W-D: Altitude  100m to  600m\n",
     "  - Briches\n",
     "  - etc.\n",
@@ -550,6 +552,11 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
+    "- Palm Trees\n",
+    "  - Esperanto Name: Palmo\n",
+    "  - Intolerable towards cold climates, so not really appropriate here.\n",
+    "    Still, they look so cool! So I am taking some liberties.\n",
+    "  - Source: https://en.wikipedia.org/wiki/Arecaceae#Range_and_habitat\n",
     "- Briches\n",
     "  - Esperanto Name: Betulo\n",
     "  - Altitude:  600m to 1400m\n",
